# ai-cli

./: Cargo.toml  README.md  ai.conf.toml.default  build.rs  large-diff-processing.md  test.txt  test_provider_limits.md  test_small_diff.md
.claude/: settings.local.json
src/: ai_client.rs  cli.rs  config.rs  git_ops.rs  history.rs  main.rs  utils.rs
src/commands/: ask.rs  chat.rs  commit.rs  fix.rs  mod.rs  publish.rs  push.rs  setup.rs
