[package]
name = "ai-cli"
version = "0.1.1"
edition = "2021"
authors = ["Med0paW <medopaw@gmail.com>"]
description = "Personal AI CLI tool for chat, git operations, and project publishing"
license = "MIT"

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ai = { version = "0.2", features = ["ollama_client", "openai_client"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
skim = "0.11"
rusqlite = { version = "0.32", optional = true }
anyhow = "1.0"
dirs = "5.0"

[build-dependencies]
toml = "0.8"

[features]
default = []
history = ["dep:rusqlite"]
